--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Basic Docker CI
+name: Docker CI/CD Pipeline
 
 on:
   push:
@@ -12,11 +12,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
         run: docker build -t myapp:latest .
 
-      - name: Run the app inside container
-        run: docker run myapp:latest
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Tag image for Docker Hub
+        run: docker tag myapp:latest ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+
+      - name: Push image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+
+      - name: Verify pushed image
+        run: docker pull ${{ secrets.DOCKER_USERNAME }}/myapp:latest
